// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionMenu Snapshot Tests > Button variants > matches snapshot with default variant > default-variant 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rd:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--default _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::rc::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Button variants > matches snapshot with ghost variant > ghost-variant 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rb:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--ghost _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::ra::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Button variants > matches snapshot with outline variant > outline-variant 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r9:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r8::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Compact mode > matches snapshot in compact mode > compact-mode 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r5:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r4::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--ellipsis-vertical
      data-ods=icon
      role=presentation
    />
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Compact mode > matches snapshot in compact mode with custom icon > compact-mode-custom-icon 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r7:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r6::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--ellipsis-horizontal
      data-ods=icon
      role=presentation
    />
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Custom labels and icons > matches snapshot with custom icon > custom-icon 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rn:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::rm::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--plus
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Custom labels and icons > matches snapshot with custom label > custom-label 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rl:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::rk::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Custom Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Custom labels and icons > matches snapshot with custom label and icon > custom-label-and-icon 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rp:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::ro::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--plus
      data-ods=icon
      role=presentation
    />
    Settings
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Default rendering > matches snapshot with default props > default-props 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r1:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r0::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Default rendering > matches snapshot with minimal props > minimal-props 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r3:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r2::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Edge cases > matches snapshot with empty items array > empty-items 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r19:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r18::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Edge cases > matches snapshot with many items > many-items 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r1d:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r1c::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Edge cases > matches snapshot with single item > single-item 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r1b:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r1a::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > IAM authorization states > matches snapshot when IAM is loading > iam-loading-state 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r1f:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r1e::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > IAM authorization states > matches snapshot when IAM is not authorized > iam-unauthorized-state 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r1h:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r1g::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Item variations > matches snapshot with IAM-protected items > iam-protected-items 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r15:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r14::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Item variations > matches snapshot with mixed item types > mixed-item-types 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r17:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r16::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Item variations > matches snapshot with only button items > button-only-items 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r13:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r12::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Item variations > matches snapshot with only link items > link-only-items 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:r11:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r10::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Popover positions > matches snapshot with left position > left-position 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rv:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::ru::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Popover positions > matches snapshot with right position > right-position 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rt:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::rs::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > Popover positions > matches snapshot with top position > top-position 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rr:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::rq::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > States > matches snapshot when disabled > disabled-state 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rf:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    disabled=
    id=popover::re::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > States > matches snapshot when disabled-loading > disabled-loading-state 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rj:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    disabled=
    id=popover::ri::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_button__spinner
    >
      <span
        class=_spinner _spinner--neutral _spinner--sm
        data-ods=spinner
        role=none
      >
        <svg
          aria-hidden=true
          class=_spinner__svg
          viewBox=0 0 24 24
          xmlns=http://www.w3.org/2000/svg
        >
          <rect
            fill=none
            height=24
            width=24
          />
          <g
            transform=translate(-237.694 -93.932)
          >
            <path
              d=M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z
              transform=translate(5486 4225)
            />
            <circle
              cx=1
              cy=1
              r=1
              transform=translate(248.694 114.932)
            />
            <circle
              cx=1
              cy=1
              r=1
              transform=translate(238.694 104.932)
            />
          </g>
        </svg>
      </span>
    </span>
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;

exports[`ActionMenu Snapshot Tests > States > matches snapshot when loading > loading-state 1`] = `
<div
  data-testid=navigation-action-trigger-action
>
  <button
    aria-controls=:rh:
    aria-expanded=false
    aria-haspopup=dialog
    class=_button _button--primary _button--sm _button--outline _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::rg::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_button__spinner
    >
      <span
        class=_spinner _spinner--neutral _spinner--sm
        data-ods=spinner
        role=none
      >
        <svg
          aria-hidden=true
          class=_spinner__svg
          viewBox=0 0 24 24
          xmlns=http://www.w3.org/2000/svg
        >
          <rect
            fill=none
            height=24
            width=24
          />
          <g
            transform=translate(-237.694 -93.932)
          >
            <path
              d=M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z
              transform=translate(5486 4225)
            />
            <circle
              cx=1
              cy=1
              r=1
              transform=translate(248.694 114.932)
            />
            <circle
              cx=1
              cy=1
              r=1
              transform=translate(238.694 104.932)
            />
          </g>
        </svg>
      </span>
    </span>
    <span
      class=_icon _icon--chevron-down
      data-ods=icon
      role=presentation
    />
    Actions
  </button>
</div>
`;
